syntax = "proto3";

option go_package = "../proto";

service Auth {
  rpc Login(User) returns (LoginAnswer) {}
  rpc Check(Session) returns (CheckAnswer) {}
  rpc Logout(Session) returns (LogoutAnswer) {}
}

message LoginAnswer {
  string value = 1;
  bool flag = 2;
}

message CheckAnswer {
  uint64 userID = 1;
  bool flag = 2;
}

message User {
  string login = 1;
  string password = 2;
}

message Session {
  string value = 1;
}

message LogoutAnswer {
  bool flag = 1;
}